# autobackend

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
app/: main.py
app/ai/: cost_guard.py  llm.py  memory.py
app/ai/agents/: architect.py  critic.py  repair.py
app/ai/healing/: diagnoser.py  failure_classifier.py  failure_memory.py  repair_engine.py  self_healing_engine.py
app/ai/prompts/: prompt_mutator.py  prompt_optimizer.py  prompt_registry.py  prompt_scorer.py  prompt_telemetry.py
app/api/: deps.py
app/api/routes/: analytics.py  auth.py  billing.py  generation.py  health.py  projects.py  referrals.py  webhook.py
app/core/: config.py  exceptions.py  logging.py  rate_limit.py  security.py
app/db/: init_db.py  session.py
app/middleware/: enforcement.py  fraud_middleware.py
app/models/: analytics_event.py  billing.py  generation.py  plan.py  plan_resolver.py  project.py  quota_engine.py  tenant.py  tenant_subscription.py  usage.py  user.py
app/schemas/: generation.py  project.py  user.py
app/services/: activation_engine.py  ai_pipeline.py  billing_engine.py  billing_service.py  billing_tasks.py  billing_tracker.py  cost_calculator.py  cost_guard.py  health_monitor.py  onboarding_flow.py  revenue_engine.py  runtime_validator.py  stripe_service.py  tenant_provisioning.py  upgrade_engine.py  usage_service.py  zip_builder.py
app/worker/: celery_app.py  tasks.py
docker/: Dockerfile  docker-compose.yml
scripts/: dev_run.sh  seed.py
tests/: test_auth.py  test_generation.py
(+14 files in other folders)
